<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Task Timer</string>
    <!-- Some name -->

    <!-- Navigation bar strings -->
    <string name="action_tasks">Tasks</string>
    <string name="action_generate_data">Random</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_create">Create</string>
    <string name="action_search">Search</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="button_delete_task">Delete task</string>
    <string name="button_edit_task">Edit task</string>
    <string name="addtask_save">Save</string>
    <string name="addtask_hint_name">Name</string>
    <string name="addtask_hint_description">Description</string>
    <string name="addtask_hint_sortorder">Priority</string>
    <string name="btn_addtask_save">Save</string>
    <string name="title_activity_add_edit">Edit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="instruction_heading">Instruction</string>
    <string name="instruction_description">Use create task button (+) in bottom menu</string>
    <string name="back_button">Back</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Confirm task deletion and timing related to it with:\nID: %1$d\nName: %2$s</string>
    <string name="editDiag_cancelMessage">You have unsaved changes, do you want to abandon or continue editing?</string>
    <string name="edinDiag_positive_caption">Continue</string>
    <string name="edinDiag_negative_caption">Abandon</string>
    <string name="about_version">v. 1.0.0</string>
    <string name="about__mainHeading">Task Timer</string>
    <string name="about_info">\tIt is a simple application that help you to track down time wasted on something that described in task, which you can create. Track time you can in duration menu.</string>
    <string name="about_header_info">1.About app</string>
    <string name="about_header_instruction">2.How to use</string>
    <string name="about_instruction">\tClick + button to add task \n\tPencil button allow you to edit task description and priority\n\tTrash can button allow delete task from list\n\tFor start tracking task just hold on it, when task was done, hold one more time to stop tracking.\n\tCheck duration of doing task in duration menu (second menu item in bottom menu).\n\tApplication works in landscape mode, which allow edit task easier.\n\tLandscape mode also add one more field to track in duration menu, it is -Date- field which means date when task was launched.</string>
    <string name="about_header_support">3.Support</string>
    <string name="about_support">\tIf you find a bug or strange behaviour please give a clear description of your problem in a letter on our support email: \n\t <i><u>caxi.tabb@gmail.com</u></i></string>
    <string name="tv_duration_header_name">Name</string>
    <string name="tv_duration_heading_duration">Duration</string>
    <string name="tv_duration_heading_date">Date</string>
    <string name="tv_duration_heading_description">Description</string>
    <string name="duration_filter_week">Show week</string>
    <string name="duration_filter_day">Show day</string>
    <string name="duration_filter_date">Set date to show</string>
    <string name="duration_delete">Delete old timings</string>
    >
</resources>
