<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/bottom_item">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_baseline_tasks_list"
            android:title="@string/action_tasks"
            />
        <item
            android:id="@+id/nav_duration"
            android:icon="@drawable/ic_baseline_duration"
            android:title="@string/action_search" />
        <item
            android:id="@+id/placeholder_fab_create"
            android:title="" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_help"
            android:title="@string/action_about" />
    </group>
</menu>