<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/csl_addtask_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskEditorActivity">

    <EditText
        android:id="@+id/et_addtasks_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/addtask_hint_name"
        android:inputType="textNoSuggestions"
        android:maxLength="64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_addtasks_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/addtask_hint_sortorder"
        android:inputType="textMultiLine"
        android:maxLength="256"
        app:layout_constraintEnd_toEndOf="@+id/et_addtasks_name"
        app:layout_constraintStart_toStartOf="@+id/et_addtasks_name"
        app:layout_constraintTop_toBottomOf="@+id/et_addtasks_name" />

    <EditText
        android:id="@+id/et_addtasks_sortorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/addtask_hint_sortorder"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintStart_toStartOf="@+id/et_addtasks_description"
        app:layout_constraintTop_toBottomOf="@+id/et_addtasks_description" />

    <Button
        android:id="@+id/btn_addtasks_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_addtask_save"
        app:icon="@android:drawable/ic_menu_save"
        app:layout_constraintEnd_toEndOf="@+id/et_addtasks_sortorder"
        app:layout_constraintStart_toStartOf="@+id/et_addtasks_sortorder"
        app:layout_constraintTop_toBottomOf="@+id/et_addtasks_sortorder" />

</androidx.constraintlayout.widget.ConstraintLayout>